--- a/mousepedia/templates/base.html
+++ b/mousepedia/templates/base.html
@@ -13,10 +13,15 @@
         <!-- Navbar at top of page -->
         <nav class="blue darken-4">
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo light-blue-text text-lighten-4">Mousepedia</a>
+                <img src="{{ url_for('static', filename='images/mousepedia-logo.png') }}" id="nav-logo">
+                
+                <a href="#!" class="brand-logo white-text text-align-center">Mousepedia</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fa-solid fa-circle-chevron-down light-blue-text text-lighten-4"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
+                    <li><a href="">Parks</a></li>
+                    <li><a href="">Rides</a></li>
+                    <li><a href="">Restaurants</a></li>
                 </ul>
             </div>
         </nav>
@@ -24,8 +29,40 @@
         <!-- mobile nav bar -->
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li><a href="">Parks</a></li>
+            <li><a href="">Rides</a></li>
+            <li><a href="">Restaurants</a></li>
         </ul>
     </header>
+
+    <main class="container">
+        {% block content %}
+        {% endblock %}
+    </main>
+
+    <footer class="page-footer blue darken-4">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h4 class="white-text footer-heading"><i class="fa-solid fa-book-open"></i> Mousepedia <i class="fa-solid fa-book-open"></i></h4>
+              <h8 class="white-text">Your go to website for all information regarding Disney Parks in Florida, USA.</h8>
+            </div>
+            <div class="col l4 offset-l2 s12">
+                <h5 class="white-text right-align"><i class="fa-solid fa-link"></i> Useful Links <i class="fa-solid fa-link"></i></h5>
+                <ul class="right-align">
+                  <li><a class="grey-text text-lighten-3" href="https://www.disneyworld.co.uk/destinations/">Disney Parks Website <i class="fa-solid fa-earth-americas footer-icon"></i></a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://www.disneystore.co.uk/">Disney Store <i class="fa-solid fa-bag-shopping footer-icon"></i></a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://www.visitflorida.com/">Florida Information <i class="fa-solid fa-circle-info footer-icon"></i></a></li>
+                </ul>
+              </div>
+          </div>
+        </div>
+        <div class="footer-copyright blue darken-4">
+          <div class="container">
+          © 2024 veebee4 - for educational purposes only
+          </div>
+        </div>
+      </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
