--- a/mousepedia/templates/base.html
+++ b/mousepedia/templates/base.html
@@ -40,25 +40,25 @@
         {% endblock %}
     </main>
 
-    <footer class="page-footer blue darken-4">
+    <footer class="blue darken-4 page-footer">
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
               <h4 class="white-text footer-heading"><i class="fa-solid fa-book-open"></i> Mousepedia <i class="fa-solid fa-book-open"></i></h4>
-              <h8 class="white-text">Your go to website for all information regarding Disney Parks in Florida, USA.</h8>
+              <h6 class="white-text">Your go-to website for comprehensive information on the Disney Parks in Florida, USA. Explore detailed information on the parks, rides, restaurants and customise to make your visit magical.</h6>
             </div>
             <div class="col l4 offset-l2 s12">
-                <h5 class="white-text right-align"><i class="fa-solid fa-link"></i> Useful Links <i class="fa-solid fa-link"></i></h5>
+                <h5 class="white-text right-align links-heading"><i class="fa-solid fa-link"></i> Useful Links <i class="fa-solid fa-link"></i></h5>
                 <ul class="right-align">
-                  <li><a class="grey-text text-lighten-3" href="https://www.disneyworld.co.uk/destinations/">Disney Parks Website <i class="fa-solid fa-earth-americas footer-icon"></i></a></li>
-                  <li><a class="grey-text text-lighten-3" href="https://www.disneystore.co.uk/">Disney Store <i class="fa-solid fa-bag-shopping footer-icon"></i></a></li>
-                  <li><a class="grey-text text-lighten-3" href="https://www.visitflorida.com/">Florida Information <i class="fa-solid fa-circle-info footer-icon"></i></a></li>
+                  <li class="links"><a class="white-text" href="https://www.disneyworld.co.uk/destinations/">Disney Parks Website <i class="fa-solid fa-earth-americas footer-icon"></i></a></li>
+                  <li class="links"><a class="white-text" href="https://www.disneystore.co.uk/">Disney Store <i class="fa-solid fa-bag-shopping footer-icon"></i></a></li>
+                  <li class="links"><a class="white-text" href="https://www.visitflorida.com/">Florida Information <i class="fa-solid fa-circle-info footer-icon"></i></a></li>
                 </ul>
               </div>
           </div>
         </div>
         <div class="footer-copyright blue darken-4">
-          <div class="container">
+          <div class="container white-text">
           © 2024 veebee4 - for educational purposes only
           </div>
         </div>
