--- a/mousepedia/templates/add_park.html
+++ b/mousepedia/templates/add_park.html
@@ -11,70 +11,85 @@
             <!-- park_name -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="park_name" name="park_name" minlength="5" maxlength="50" type="text" required>
+                    <i class="fa-solid fa-hat-wizard blue-text text-darken-4 prefix"></i>
+                    <input id="park_name" name="park_name" minlength="5" maxlength="50" type="text" data-length="50" class="textCount" required>
                     <label for="park_name">Park Name</label>
                 </div>
             </div>
             <!-- park_address -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="park_address" name="park_address" minlength="5" maxlength="50" type="text" class="validate" required>
+                    <i class="fa-solid fa-location-dot blue-text text-darken-4 prefix"></i>
+                    <input id="park_address" name="park_address" minlength="5" maxlength="50" type="text" class="textCount" required data-length="50">
                     <label for="park_address">Address</label>
                 </div>
             </div>
             <!-- park_description -->
             <div class="row">
                 <div class="input-field col s12">
-                    <textarea id="park_description" name="park_description" class="materialize-textarea" required></textarea>
+                    <i class="fa-solid fa-pencil blue-text text-darken-4 prefix"></i>
+                    <textarea id="park_description" name="park_description" minlength="5" maxlength="500" class="materialize-textarea textCount" data-length="500" required></textarea>
                     <label for="park_description">Description</label>
                 </div>
             </div>
             <!-- date_opened -->
             <div class="row">
                 <div class="input-field col s12">
+                    <i class="fa-solid fa-calendar-days blue-text text-darken-4 prefix"></i>
                     <input type="text" name="date_opened" class="datepicker">
                     <label for="date_opened">Date Opened</label>
                 </div>
             </div>
             <!-- opening_times -->
             <div class="row">
-                <div class="input-field col s12">
-                    <input id="opening_times" name="opening_times" type="text" class="validate" required>
-                    <label for="opening_times">Opening Times</label>
+                <div class="input-field col s6">
+                    <i class="fa-solid fa-clock blue-text text-darken-4 prefix"></i>
+                    <input type="text" class="timepicker" name="time_open">
+                    <label for="time_open">Time park opens</label>
+                </div>
+                <div class="input-field col s6">
+                    <i class="fa-solid fa-clock blue-text text-darken-4 prefix"></i>
+                    <input type="text" class="timepicker" name="time_closed">
+                    <label for="time_closed">Time park closes</label>
                 </div>
             </div>
             <!-- num_restaurants -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="num_restaurants" name="num_restaurants" type="number" class="validate">
+                    <i class="fa-solid fa-utensils blue-text text-darken-4 prefix"></i>
+                    <input id="num_restaurants" name="num_restaurants" type="number" class="validate textCount">
                     <label for="num_restaurants">How many restaurants are at this park?</label>
                 </div>
             </div>
             <!-- num_rides -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="num_rides" name="num_rides" type="number" class="validate">
+                    <i class="fa-solid fa-rocket blue-text text-darken-4 prefix"></i>
+                    <input id="num_rides" name="num_rides" type="number" class="validate textCount">
                     <label for="num_rides">How many rides are at this park?</label>
                 </div>
             </div>
             <!-- entertainment -->
             <div class="row">
                 <div class="input-field col s12">
-                    <textarea id="entertainment" name="entertainment" class="materialize-textarea"></textarea>
+                    <i class="fa-solid fa-masks-theater blue-text text-darken-4 prefix"></i>
+                    <textarea id="entertainment" name="entertainment" minlength="5" maxlength="500" class="materialize-textarea textCount" data-length="500"></textarea>
                     <label for="entertainment">What entertainment/shows does this park have?</label>
                 </div>
             </div>
             <!-- special_features -->
             <div class="row">
                 <div class="input-field col s12">
-                    <textarea id="special_features" name="special_features" class="materialize-textarea"></textarea>
+                    <i class="fa-solid fa-star blue-text text-darken-4 prefix"></i>
+                    <textarea id="special_features" name="special_features" minlength="5" maxlength="500" class="materialize-textarea textCount" data-length="500"></textarea>
                     <label for="special_features">Does this park have any special features?</label>
                 </div>
             </div>
             <!-- transport_between_parks -->
             <div class="row">
                 <div class="input-field col s12">
-                    <textarea id="transport_between_parks" name="transport_between_parks" class="materialize-textarea"></textarea>
+                    <i class="fa-solid fa-broom blue-text text-darken-4 prefix"></i>
+                    <textarea id="transport_between_parks" name="transport_between_parks" minlength="5" maxlength="500" class="materialize-textarea textCount" data-length="500"></textarea>
                     <label for="transport_between_parks">Does this park have transport to other Disney Parks?</label>
                 </div>
             </div>
