--- a/mousepedia/templates/add_park.html
+++ b/mousepedia/templates/add_park.html
@@ -10,9 +10,9 @@
         <form class="col s12" method="POST" action="{{ url_for('add_park') }}">
             <!-- park_name -->
             <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col s12 label-alt-colour">
                     <i class="fa-solid fa-hat-wizard blue-text text-darken-4 prefix"></i>
-                    <input id="park_name" name="park_name" minlength="5" maxlength="50" type="text" data-length="50" class="textCount" required>
+                    <input id="park_name" name="park_name" minlength="5" maxlength="50" type="text" required>
                     <label for="park_name">Park Name</label>
                 </div>
             </div>
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-location-dot blue-text text-darken-4 prefix"></i>
-                    <input id="park_address" name="park_address" minlength="5" maxlength="50" type="text" class="textCount" required data-length="50">
+                    <input id="park_address" name="park_address" minlength="5" maxlength="50" type="text" required>
                     <label for="park_address">Address</label>
                 </div>
             </div>
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-pencil blue-text text-darken-4 prefix"></i>
-                    <textarea id="park_description" name="park_description" minlength="5" maxlength="500" class="materialize-textarea textCount" data-length="500" required></textarea>
+                    <textarea id="park_description" name="park_description" minlength="5" maxlength="500" class="materialize-textarea" required></textarea>
                     <label for="park_description">Description</label>
                 </div>
             </div>
@@ -57,7 +57,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-utensils blue-text text-darken-4 prefix"></i>
-                    <input id="num_restaurants" name="num_restaurants" type="number" class="validate textCount">
+                    <input id="num_restaurants" name="num_restaurants" type="number" class="validate">
                     <label for="num_restaurants">How many restaurants are at this park?</label>
                 </div>
             </div>
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-rocket blue-text text-darken-4 prefix"></i>
-                    <input id="num_rides" name="num_rides" type="number" class="validate textCount">
+                    <input id="num_rides" name="num_rides" type="number" class="validate">
                     <label for="num_rides">How many rides are at this park?</label>
                 </div>
             </div>
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-masks-theater blue-text text-darken-4 prefix"></i>
-                    <textarea id="entertainment" name="entertainment" minlength="5" maxlength="500" class="materialize-textarea textCount" data-length="500"></textarea>
+                    <textarea id="entertainment" name="entertainment" minlength="5" maxlength="500" class="materialize-textarea"></textarea>
                     <label for="entertainment">What entertainment/shows does this park have?</label>
                 </div>
             </div>
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-star blue-text text-darken-4 prefix"></i>
-                    <textarea id="special_features" name="special_features" minlength="5" maxlength="500" class="materialize-textarea textCount" data-length="500"></textarea>
+                    <textarea id="special_features" name="special_features" minlength="5" maxlength="500" class="materialize-textarea"></textarea>
                     <label for="special_features">Does this park have any special features?</label>
                 </div>
             </div>
@@ -89,13 +89,13 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-broom blue-text text-darken-4 prefix"></i>
-                    <textarea id="transport_between_parks" name="transport_between_parks" minlength="5" maxlength="500" class="materialize-textarea textCount" data-length="500"></textarea>
+                    <textarea id="transport_between_parks" name="transport_between_parks" minlength="5" maxlength="500" class="materialize-textarea"></textarea>
                     <label for="transport_between_parks">Does this park have transport to other Disney Parks?</label>
                 </div>
             </div>
             <div class="row">
                 <div class="col s12 center-align">
-                    <button class="btn-large" type="submit" name="action">
+                    <button class="btn-large blue darken-4 submit-button" type="submit" name="action">
                         Add Park
                     </button>
                 </div>
