Fix: error with add_park form

--- a/mousepedia/templates/add_park.html
+++ b/mousepedia/templates/add_park.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="input-field col s12 label-alt-colour">
                     <i class="fa-solid fa-hat-wizard blue-text text-darken-4 prefix"></i>
-                    <input id="park_name" name="park_name" minlength="5" maxlength="50" type="text" required>
+                    <input id="park_name" name="park_name" minlength="5" maxlength="50" type="text" class="validate" required>
                     <label for="park_name">Park Name</label>
                 </div>
             </div>
@@ -20,7 +20,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-location-dot blue-text text-darken-4 prefix"></i>
-                    <input id="park_address" name="park_address" minlength="5" maxlength="50" type="text" required>
+                    <input id="park_address" name="park_address" minlength="5" maxlength="50" type="text" class="validate" required>
                     <label for="park_address">Address</label>
                 </div>
             </div>
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-pencil blue-text text-darken-4 prefix"></i>
-                    <textarea id="park_description" name="park_description" minlength="5" maxlength="500" class="materialize-textarea" required></textarea>
+                    <textarea id="park_description" name="park_description" minlength="5" maxlength="500" class="materialize-textarea validate" required></textarea>
                     <label for="park_description">Description</label>
                 </div>
             </div>
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-calendar-days blue-text text-darken-4 prefix"></i>
-                    <input type="text" name="date_opened" class="datepicker">
+                    <input type="text" name="date_opened" class="datepicker validate">
                     <label for="date_opened">Date Opened</label>
                 </div>
             </div>
@@ -44,12 +44,12 @@
             <div class="row">
                 <div class="input-field col s6">
                     <i class="fa-solid fa-clock blue-text text-darken-4 prefix"></i>
-                    <input type="text" class="timepicker" name="time_open">
+                    <input type="text" class="timepicker validate" name="time_open">
                     <label for="time_open">Time park opens</label>
                 </div>
                 <div class="input-field col s6">
                     <i class="fa-solid fa-clock blue-text text-darken-4 prefix"></i>
-                    <input type="text" class="timepicker" name="time_closed">
+                    <input type="text" class="timepicker validate" name="time_closed">
                     <label for="time_closed">Time park closes</label>
                 </div>
             </div>
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-masks-theater blue-text text-darken-4 prefix"></i>
-                    <textarea id="entertainment" name="entertainment" minlength="5" maxlength="500" class="materialize-textarea"></textarea>
+                    <textarea id="entertainment" name="entertainment" minlength="5" maxlength="500" class="materialize-textarea validate"></textarea>
                     <label for="entertainment">What entertainment/shows does this park have?</label>
                 </div>
             </div>
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-star blue-text text-darken-4 prefix"></i>
-                    <textarea id="special_features" name="special_features" minlength="5" maxlength="500" class="materialize-textarea"></textarea>
+                    <textarea id="special_features" name="special_features" minlength="5" maxlength="500" class="materialize-textarea validate"></textarea>
                     <label for="special_features">Does this park have any special features?</label>
                 </div>
             </div>
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-broom blue-text text-darken-4 prefix"></i>
-                    <textarea id="transport_between_parks" name="transport_between_parks" minlength="5" maxlength="500" class="materialize-textarea"></textarea>
+                    <textarea id="transport_between_parks" name="transport_between_parks" minlength="5" maxlength="500" class="materialize-textarea validate"></textarea>
                     <label for="transport_between_parks">Does this park have transport to other Disney Parks?</label>
                 </div>
             </div>
