--- a/mousepedia/templates/home.html
+++ b/mousepedia/templates/home.html
@@ -4,28 +4,10 @@
 <h1 class="blue-text text-darken-4 center-align page-heading"><i class="fa-solid fa-hat-wizard blue-text text-lighten-3"></i> Welcome to Mousepedia <i class="fa-solid fa-hat-wizard blue-text text-lighten-3"></i></h1>
 <h5 class="blue-text text-darken-4 center-align home-tagline">The Ultimate Customisable Guide for All Things at Disney, Florida</h5>
 
-<!-- <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
-        {% for park in park %}
-        <div class="card-image">
-          <img src="{{ park.image_url }}" alt="card-image">
-          <span class="card-title">Card Title</span>
-        </div>
-        <div class="card-content">
-            <h4 class="card-heading">{{ park.park_name }}</h4>
-            <h6>{{ park.park_address }}</h6>
-            <p class="card-text">{{ park.park_description }}</p>
-        </div>
-        {% endfor %}
-      </div>
-    </div>
-  </div> -->
-
 <div class="card">
     <div class="card-image">
         {% for park in parks %}
-      <img class="activator" src="images/office.jpg">
+      <img class="park-display" src="images/office.jpg">
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4">{{ parks.park_name }}</span>
